# Rubiks-cube-project

./: .gitignore  README.md  build.bat  temp_inspect.js  temp_inspect2.js
Back end/: CMakeLists.txt  CubeController.cpp  CubeController.hpp  main.cpp
Back end/Core/: FaceTurnCommand.hpp  ICommand.hpp  MoveParser.hpp  ViewRotateCommand.hpp  WideFaceTurnCommand.hpp
Back end/Cube/: Color.hpp  Coordinate.hpp  Cube.hpp  CubeRotator.hpp  Cubie.hpp  CubieRotator.cpp  CubieType.hpp  Face.hpp  FaceEnum.hpp
Back end/Cube Mechanics/: Axis.hpp  Camera.hpp  CameraDisplayer.hpp  CubieColorSetter.hpp  Direction.hpp  Move.hpp  MoveTranslator.hpp  RotateType.hpp  RotationMove.hpp
Back end/Cube solving algorithms/: CFOPAlgorithm.hpp  CubeSolver.hpp  CubeSolverFactory.hpp  KoceimbaAlgorithm.hpp  LBLAlgorithm.hpp  SolverType.hpp
Back end/JSONAdapter/: CubeWASMAdapter.hpp  IReport.hpp
Back end/Utils/: CameraUtils.hpp  CubeGeometryUtils.cpp  CubeGeometryUtils.hpp
Front end/: DOCUMENTATION.md  RubiksCube.js  RubiksCube.wasm  engine.js  index.html  script.js  style.css
